<resources>
    <string name="app_name">My Card</string>
    <string name="Lo">Login</string>
    <string name="down_bar_text">My Card | University Of Jeddah</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="name">Name:</string>
    <string name="id_number">ID Number:</string>
    <string name="college">College:</string>
    <string name="camps_id">Camps ID:</string>
    <string name="student_information">student information</string>
    <string name="forget_card">Forget Card</string>
    <string name="lost_card">Lost Card</string>
    <string name="please_visit_the_deanship_of_admission_amp_registration_to_get_your_card"><![CDATA[Please visit the deanship of admission & registration to get your card]]></string>
    <string name="ok">Ok</string>
    <string name="found">Found</string>
    <string name="request">Request</string>
    <string name="receive">Receive</string>
    <string name="you_have_to_pay_a_fine">You have to pay a fine</string>
    <string name="request_an_appointment">Request an appointment</string>
    <string name="payment_info">Payment info</string>
    <string name="show_qr">QR Code</string>
    <string name="view_requests">View Requests</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="search">Search</string>
    <string name="employee">Employee:</string>
    <string name="number_of_times_card_was_forgotten">number of times card was forgotten</string>
    <string name="You_have_to_pay_a_fine">you have to pay the fine</string>
    <string name="remember">"Remember: "</string>
    <string name="warning">"Warning: "</string>
    <string name="caution">" "</string>
    <string name="firsttime">"the forth time you forget your card you will pay a fine"</string>
    <string name="secondtime">"the second time for forget the card"</string>
    <string name="lasttime">"this is your last chance next time you will pay a fine"</string>
    <string name="your_appointment_to_submit_the_payment_receipt">your appointment to submit the payment receipt</string>
    <string name="employee_information">Employee Information</string>
    <string name="employee_id">Employee ID: </string>
    <string name="gate">Gate: </string>
    <string name="scan_qr">Scan QR</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="welcome_to_my_card_app">Welcome To My Card App</string>
    <string name="student">Student</string>
    <string name="security_guaed">Security Guaed</string>
    <string name="deanship_of_students_affairs">Deanship Of Students Affairs</string>
    <string name="log_out">Log Out</string>
    <string name="are_you">Are You ?</string>
    <string name="time_remaining_to_find_the_card_and_close_the_request_or_process_new_card">time remaining to find the card and close the request or process new card</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact US</string>
    <string name="payment_information">Payment information</string>
    <string name="this_is_account_number_to_send_50_rs">This is account number to send 50 RS</string>
    <string name="copy">copy</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="align_the_qr_code_within_to_scan">align the QR code within to scan</string>
    <string name="keep_your_card_in_a_safe_place">Keep your card in a safe place</string>
    <string name="forget_requests">Forget Requests</string>
    <string name="lost_requests">Lost Requests</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="program">Program:</string>
    <string name="nid">NID:</string>
    <string name="end_date">End Date:</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="an_appointment_to_pay_the_fine">An appointment to pay the fine</string>
    <string name="requst_id">Requst ID:</string>
    <string name="main">Main</string>
    <string name="request_type">Request Type:</string>
    <string name="deanship_information">Deanship_information</string>
    <string name="view_card">View Card</string>
    <string name="visit_us_at">Visit US at</string>


</resources>