<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    tools:context=".Activities.UserChoice">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/are_you"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/student"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        android:onClick="ToStd"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/security_guaed"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/black"
        android:onClick="ToSec"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="215dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/deanship_of_students_affairs"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:onClick="ToDen"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/down_bar_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>