<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mycard.Activities.Student"
    android:id="@+id/drawer">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/main">


        <include
            android:id="@+id/toto"
            layout="@layout/mybar"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ToForget"
            android:text="@string/student_information"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/stuname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_number"/>

                <TextView
                    android:id="@+id/stuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college"/>

                <TextView
                    android:id="@+id/stucol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camps_id"/>

                <TextView
                    android:id="@+id/stucam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>


            </LinearLayout>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:padding="15dp"
                android:onClick="ToForget"
                android:text="@string/forget_card"
                android:layout_gravity="center"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:padding="15dp"
                android:text="@string/lost_card"
                android:onClick="ToLost"
                android:layout_gravity="center"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LogOut"
                android:layout_gravity="center"
                android:onClick="LogOut"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="160dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/down_bar_text"
            android:textColor="@color/white"
            android:gravity="center"
            />



    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/dark_gray"
        app:itemIconTint="@color/dark_gray"
        app:menu="@menu/std_menu"
        android:layout_gravity="start"
       >
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
