<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Request_Details_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main"
    tools:context=".Activities.Request_Details">


    <include
        layout="@layout/container_layout"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:orientation="vertical"
        >


        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_information"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/req_del_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_number"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/req_id_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/req_college"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camps_id"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/req_cam_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requst_id"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/request_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_type"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/request_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "/>

            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

        <!--        Buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/req_details_view_card"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="View Card"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/Set_APT"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/set_appointment"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                />



        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <include
            layout="@layout/footer"/>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/Request_Details_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        android:fitsSystemWindows="true">


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
