<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Set_Appointment_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main"
    tools:context=".Activities.Set_Appointment">


    <include layout="@layout/container_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/an_appointment_to_pay_the_fine"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <Space
            android:layout_width="40dp"
            android:layout_height="40dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:text="@string/date"/>


            <Space
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/BtnChDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_date"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:gravity="center"/>




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:paddingStart="20dp"
                android:text="@string/time"/>


            <Space
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                />

            <Spinner
                android:id="@+id/spn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


        <Space
            android:layout_width="40dp"
            android:layout_height="80dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <Button
                android:id="@+id/set_APT_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="@string/send"/>




        </LinearLayout>

        <Space
            android:layout_width="40dp"
            android:layout_height="210dp"/>

        <include
            layout="@layout/footer"/>


    </LinearLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/Set_Appointment_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        android:fitsSystemWindows="true">


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
